--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.6.2",
     "path": "^0.12.7",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
+    "eslint": "^8.51.0",
     "nodemon": "^3.0.1"
   }
 }
